--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -37,6 +37,12 @@ server {
 	# legacy endpoint rewrite
 	rewrite /skynet/blacklist /skynet/blocklist permanent;
 
+	# enable CORS
+	more_set_headers 'Access-Control-Allow-Origin: *';
+	more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS, PUT, DELETE';
+	more_set_headers 'Access-Control-Allow-Headers: DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+	more_set_headers 'Access-Control-Expose-Headers: Content-Length,Content-Range,Skynet-File-Metadata';
+
 	location / {
 		# This is only safe workaround to reroute based on some conditions
 		# See https://www.nginx.com/resources/wiki/start/topics/depth/ifisevil/
