--- a/docker/caddy/Dockerfile
+++ b/docker/caddy/Dockerfile
@@ -6,3 +6,5 @@ RUN xcaddy build --with github.com/caddy-dns/route53
 FROM caddy:2.3.0
 
 COPY --from=caddy-builder /usr/bin/caddy /usr/bin/caddy
+
+ CMD ["caddy" "run" "--config" "/etc/caddy/config.json" "--adapter" "json"]
