extend handshake api with v2 converter

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -178,22 +178,13 @@ server {
 				local publickey = hnsres_json.registry.publickey
 				local datakey = hnsres_json.registry.datakey
 
-				-- make a get request to /skynet/registry endpoint with the credentials from text record
-				local registry_res = ngx.location.capture("/skynet/registry/cached?publickey=" .. publickey .. "&datakey=" .. datakey)
+				-- internal only endpoint to convert registry entry to skylink v2
+				local skylink_v2_res = ngx.location.capture("/internal/skylink/create/" .. publickey .. "/" .. datakey)
+				
+				-- example response: '{"skylink":"sia://XABvi7JtJbQSMAcDwnUnmp2FKDPjg8_tTTFP4BwMSxVdEg"}'
+				local skylink_v2_json = json.decode(skylink_v2_res.body)
 
-				-- we want to fail with a generic 404 when /skynet/registry returns anything but 200 OK
-				if registry_res.status ~= ngx.HTTP_OK then
-					ngx.exit(ngx.HTTP_NOT_FOUND)
-				end
-
-				-- since /skynet/registry endpoint response is a json, we need to decode it before we access it
-				local registry_json = json.decode(registry_res.body)
-				-- response will contain a hex encoded skylink, we need to decode it
-				local data = (registry_json.data:gsub('..', function (cc)
-					return string.char(tonumber(cc, 16))
-				end))
-
-				skylink = data
+				skylink = skylink_v2_json.skylink
 			end
 
 			-- fail with a generic 404 if skylink has not been extracted from a valid /hnsres response for some reason
@@ -230,6 +221,13 @@ server {
 
 	location /hnsres {
 		include /etc/nginx/conf.d/include/cors;
+
+		proxy_pass http://handshake-api:3100;
+	}
+
+	location /registry-to-skylink {
+		internal; # internal endpoint only
+		access_log off; # do not log traffic
 
 		proxy_pass http://handshake-api:3100;
 	}
