fix endpoint name

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -179,7 +179,7 @@ server {
 				local datakey = hnsres_json.registry.datakey
 
 				-- internal only endpoint to convert registry entry to skylink v2
-				local skylink_v2_res = ngx.location.capture("/internal/skylink/create/" .. publickey .. "/" .. datakey)
+				local skylink_v2_res = ngx.location.capture("/registry-to-skylink/" .. publickey .. "/" .. datakey)
 				
 				-- example response: '{"skylink":"sia://XABvi7JtJbQSMAcDwnUnmp2FKDPjg8_tTTFP4BwMSxVdEg"}'
 				local skylink_v2_json = json.decode(skylink_v2_res.body)
