--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -412,6 +412,11 @@ server {
 		# v2 support
 		set $skylink_v1 $skylink;
 		set $skylink_v2 $skylink;
+		
+		header_filter_by_lua_block {
+			ngx.log(ngx.ERR, ngx.header.proof)
+			ngx.log(ngx.ERR, ngx.header.Proof)
+		}
 
 		access_by_lua_block {
 			-- disable cache if this is skylink v2
