--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -337,6 +337,7 @@ server {
 		proxy_send_timeout 600;
 
 		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
+		proxy_http_version 1.1;
 		proxy_set_header Expect $http_expect;
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
