use 1.1 in caddy:

--- a/docker/caddy/Caddyfile
+++ b/docker/caddy/Caddyfile
@@ -41,5 +41,9 @@
         }
     }
 
-    reverse_proxy nginx:80
+    reverse_proxy nginx:80 {
+        transport http {
+            versions 1.1
+        }
+    }
 }
