--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -336,7 +336,7 @@ server {
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
 		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect https://siad http://siasky.xyz;
+		proxy_redirect https://siad https://siasky.xyz;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
 		proxy_pass http://siad;
