--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -331,12 +331,22 @@ server {
 
 		client_max_body_size 50M; # tus chunks size is 40M + leaving 10M of breathing room
 
-		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
-		proxy_http_version 1.1;
+        # Disable request and response buffering
+        proxy_request_buffering  off;
+        proxy_buffering          off;
+        proxy_http_version       1.1;
+
+        # Add X-Forwarded-* headers
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_set_header         Upgrade $http_upgrade;
+        proxy_set_header         Connection "upgrade";
+        client_max_body_size     0;
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
 		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect https://siad https://siasky.xyz;
+		proxy_redirect $scheme://$host $scheme://siasky.xyz;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
 		proxy_pass http://siad;
