--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -344,7 +344,7 @@ server {
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
 		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect $scheme://$host https://siasky.xyz;
+		proxy_redirect $scheme://$host http://siasky.xyz;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
 		proxy_pass http://siad;
