--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -328,6 +328,9 @@ server {
 	# endpoing implementing resumable file uploads open protocol https://tus.io
 	location /skynet/tus {
 		include /etc/nginx/conf.d/include/cors;
+		include /etc/nginx/conf.d/include/track-upload;
+
+		client_max_body_size 50M; # tus chunks size is 40M + leaving 10M of breathing room
 
         # Disable request and response buffering
         proxy_request_buffering  off;
@@ -344,14 +347,37 @@ server {
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
 		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect $scheme://$host https://siasky.xyz;
+		proxy_redirect https://siad $SKYNET_SERVER_API;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
 		proxy_pass http://siad;
 
 		# set max upload size dynamically based on account limits
 		rewrite_by_lua_block {
+			-- set default limit value to 1 GB
 			ngx.req.set_header("SkynetMaxUploadSize", 1073741824)
+
+			-- this block runs only when accounts are enabled
+			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
+
+			-- fetch account limits and set max upload size accordingly
+			local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
+			if res.status == ngx.HTTP_OK then
+				local json = require('cjson')
+				local limits = json.decode(res.body)
+				ngx.req.set_header("SkynetMaxUploadSize", limits.maxUploadSize)
+			end
+		}
+
+		# extract skylink from base64 encoded upload metadata and assign to a proper header
+		header_filter_by_lua_block {
+			if ngx.header["Upload-Metadata"] then
+				local encodedSkylink = string.match(ngx.header["Upload-Metadata"], "Skylink ([^,?]+)")
+
+				if encodedSkylink then
+					ngx.header["Skynet-Skylink"] = ngx.decode_base64(encodedSkylink)
+				end
+			end
 		}
 	}
 
