--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -66,6 +66,10 @@ http {
 
     #gzip  on;
 
+    # upgrade proxy connections to 1.11
+    # important for tus and byte-range requests
+    proxy_http_version 1.1;
+
     # include skynet-portal-api and skynet-server-api header on every request
     header_filter_by_lua_block {
         ngx.header["Skynet-Portal-Api"] = os.getenv("SKYNET_PORTAL_API")
