remove caddy from http proxies chain

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -61,7 +61,7 @@ server {
 	ssl_session_tickets off;
 
 	# curl https://ssl-config.mozilla.org/ffdhe2048.txt > /path/to/dhparam
-	ssl_dhparam /path/to/dhparam;
+	ssl_dhparam /data/dhparam.pem;
 
 	# intermediate configuration
 	ssl_protocols TLSv1.2 TLSv1.3;
