remove caddy from http proxies chain

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -60,7 +60,7 @@ server {
 	ssl_session_cache shared:MozSSL:10m; # about 40000 sessions
 	ssl_session_tickets off;
 
-	# curl https://ssl-config.mozilla.org/ffdhe2048.txt > /path/to/dhparam
+	# curl -s https://ssl-config.mozilla.org/ffdhe2048.txt -o /path/to/dhparam
 	ssl_dhparam /data/dhparam.pem;
 
 	# intermediate configuration
