--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -58,7 +58,7 @@ server {
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.key;
 	ssl_session_timeout 1d;
 	ssl_session_cache shared:MozSSL:10m; # about 40000 sessions
-	# ssl_session_tickets off;
+	ssl_session_tickets off;
 
 	# curl -s https://ssl-config.mozilla.org/ffdhe2048.txt -o /path/to/dhparam
 	ssl_dhparam /data/dhparam.pem;
@@ -66,7 +66,7 @@ server {
 	# intermediate configuration
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-	# ssl_prefer_server_ciphers off;
+	ssl_prefer_server_ciphers off;
 
 	# HSTS (ngx_http_headers_module is required) (63072000 seconds)
 	add_header Strict-Transport-Security "max-age=63072000" always;
