--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -4,4 +4,4 @@ FROM openresty/openresty:1.19.3.1-8-bionic
 RUN luarocks install luasocket
 
 # CMD ["sh", "-c", "service cron start;", "/usr/local/openresty/bin/openresty -g daemon off;"]
-CMD ["sh", "-c", "curl -s https://ssl-config.mozilla.org/ffdhe2048.txt -o /data/dhparam.pem;", "/usr/local/openresty/bin/openresty -g daemon off;"]
+CMD ["sh", "-c", "curl -s https://ssl-config.mozilla.org/ffdhe2048.txt -o /data/dhparam.pem ; /usr/local/openresty/bin/openresty -g 'daemon off'"]
