remove caddy from http proxies chain

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -372,12 +372,12 @@ server {
 			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
 
 			-- fetch account limits and set max upload size accordingly
-			local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
-			if res.status == ngx.HTTP_OK then
-				local json = require('cjson')
-				local limits = json.decode(res.body)
-				ngx.req.set_header("SkynetMaxUploadSize", limits.maxUploadSize)
-			end
+			-- local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
+			-- if res.status == ngx.HTTP_OK then
+			-- 	local json = require('cjson')
+			-- 	local limits = json.decode(res.body)
+			-- 	ngx.req.set_header("SkynetMaxUploadSize", limits.maxUploadSize)
+			-- end
 		}
 
 		# extract skylink from base64 encoded upload metadata and assign to a proper header
