--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -347,18 +347,21 @@ server {
 		include /etc/nginx/conf.d/include/cors;
 		include /etc/nginx/conf.d/include/track-upload;
 
-		client_max_body_size 50M; # tus chunks size is 40M + leaving 10M of breathing room
+        # Disable request and response buffering
+        proxy_request_buffering  off;
+        proxy_buffering          off;
 
-		# increase request timeouts
-		proxy_read_timeout 600;
-		proxy_send_timeout 600;
+        # Add X-Forwarded-* headers
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
-		proxy_set_header Expect $http_expect;
+        proxy_set_header         Upgrade $http_upgrade;
+        proxy_set_header         Connection "upgrade";
+        client_max_body_size     0;
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
 		set_by_lua $SKYNET_SERVER_API 'return os.getenv("SKYNET_SERVER_API")';
-		proxy_redirect https://siad $SKYNET_SERVER_API;
+		proxy_redirect $scheme://$host $SKYNET_SERVER_API;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
 		proxy_pass http://siad;
