--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -345,7 +345,7 @@ server {
 	# endpoing implementing resumable file uploads open protocol https://tus.io
 	location /skynet/tus {
 		include /etc/nginx/conf.d/include/cors;
-		include /etc/nginx/conf.d/include/track-upload;
+		# include /etc/nginx/conf.d/include/track-upload;
 
         # Disable request and response buffering
         proxy_request_buffering  off;
@@ -355,8 +355,8 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_set_header         Upgrade $http_upgrade;
-        proxy_set_header         Connection "upgrade";
+        # proxy_set_header         Upgrade $http_upgrade;
+        # proxy_set_header         Connection "upgrade";
         client_max_body_size     0;
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
@@ -372,7 +372,7 @@ server {
 			ngx.req.set_header("SkynetMaxUploadSize", 1073741824)
 
 			-- this block runs only when accounts are enabled
-			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
+			-- if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
 
 			-- fetch account limits and set max upload size accordingly
 			-- local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
