--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -75,8 +75,8 @@ server {
 	server_name "~^(((?<base32_subdomain>([a-z0-9]{55}))|(?<hns_domain>[^\.]+)\.hns)\.)?((?<portal_domain>[^.]+)\.)?(?<domain>[^.]+)\.(?<tld>[^.]+)$";
 
 	# ddos protection: closing slow connections
-	client_body_timeout 5s;
-	client_header_timeout 5s;
+	# client_body_timeout 5s;
+	# client_header_timeout 5s;
 
 	# Increase the body buffer size, to ensure the internal POSTs can always
 	# parse the full POST contents into memory.
@@ -355,8 +355,8 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # proxy_set_header         Upgrade $http_upgrade;
-        # proxy_set_header         Connection "upgrade";
+        proxy_set_header         Upgrade $http_upgrade;
+        proxy_set_header         Connection "upgrade";
         client_max_body_size     0;
 
 		# rewrite proxy request to use correct host uri from env variable (required to return correct location header)
