--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -75,8 +75,8 @@ server {
 	server_name "~^(((?<base32_subdomain>([a-z0-9]{55}))|(?<hns_domain>[^\.]+)\.hns)\.)?((?<portal_domain>[^.]+)\.)?(?<domain>[^.]+)\.(?<tld>[^.]+)$";
 
 	# ddos protection: closing slow connections
-	# client_body_timeout 5s;
-	# client_header_timeout 5s;
+	client_body_timeout 1h;
+	client_header_timeout 1h;
 
 	# Increase the body buffer size, to ensure the internal POSTs can always
 	# parse the full POST contents into memory.
