--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -77,6 +77,7 @@ server {
 	# ddos protection: closing slow connections
 	client_body_timeout 1h;
 	client_header_timeout 1h;
+	send_timeout 1h;
 
 	# Increase the body buffer size, to ensure the internal POSTs can always
 	# parse the full POST contents into memory.
