--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -79,6 +79,10 @@ server {
 	client_header_timeout 1h;
 	send_timeout 1h;
 
+	proxy_connect_timeout 1h;
+	proxy_read_timeout 1h;
+	proxy_send_timeout 1h;
+
 	# Increase the body buffer size, to ensure the internal POSTs can always
 	# parse the full POST contents into memory.
 	client_body_buffer_size 128k;
