--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -322,7 +322,7 @@ server {
 		# }
 
 		# proxy this call to siad endpoint (make sure the ip is correct)
-		proxy_pass http://siad/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
+		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
 	}
 
 	# endpoing implementing resumable file uploads open protocol https://tus.io
