--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -34,6 +34,17 @@ events {
     worker_connections  1024;
 }
 
+stream {
+    server {
+        listen 12345;
+
+        # 19 MiB/min = ~332k/s
+        proxy_upload_rate 332k;
+
+        proxy_pass http://sia:9980;
+    }
+}
+
 
 http {
     include       mime.types;
