--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -37,11 +37,12 @@ events {
 stream {
     server {
         listen 12345;
+	    listen [::]:12345;
 
         # 19 MiB/min = ~332k/s
         proxy_upload_rate 32k;
 
-        proxy_pass http://sia:9980;
+        proxy_pass http://10.10.10.10:9980;
     }
 }
 
