--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -35,6 +35,10 @@ events {
 }
 
 stream {
+    upstream siad {
+	    server sia:9980;
+    }
+
     server {
         listen 12345;
 	    listen [::]:12345;
@@ -42,7 +46,7 @@ stream {
         # 19 MiB/min = ~332k/s
         proxy_upload_rate 32k;
 
-        proxy_pass http://10.10.10.10:9980;
+        proxy_pass http://sia;
     }
 }
 
