--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -305,6 +305,7 @@ server {
 		proxy_send_timeout 600;
 
 		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
+        proxy_buffering         off;
 		proxy_set_header Expect $http_expect;
 		proxy_set_header User-Agent: Sia-Agent;
 
