--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -305,22 +305,22 @@ server {
 		proxy_send_timeout 600;
 
 		proxy_request_buffering off; # stream uploaded files through the proxy as it comes in
-        proxy_buffering         off;
 		proxy_set_header Expect $http_expect;
 		proxy_set_header User-Agent: Sia-Agent;
 
-		# access_by_lua_block {
-		# 	-- this block runs only when accounts are enabled
-		# 	if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
+		access_by_lua_block {
+			-- this block runs only when accounts are enabled
+			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
 
-		# 	ngx.var.upload_limit_rate = 5 * 1024 * 1024
-		# 	local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
-		# 	if res.status == ngx.HTTP_OK then
-		# 		local json = require('cjson')
-		# 		local user = json.decode(res.body)
-		# 		ngx.var.upload_limit_rate = ngx.var.upload_limit_rate * (user.tier + 1)
-		# 	end
-		# }
+			-- limit by default to 2 mbps for anonymous users
+			ngx.header["Upload-Rate"] = 2 * 1024 * 1024
+			local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
+			if res.status == ngx.HTTP_OK then
+				local json = require('cjson')
+				local limits = json.decode(res.body)
+				ngx.header["Upload-Rate"] = limits.upload
+			end
+		}
 
 		# proxy this call to siad endpoint (make sure the ip is correct)
 		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
