--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -39,8 +39,7 @@ stream {
         listen 12345;
 	    listen [::]:12345;
 
-        # 19 MiB/min = ~332k/s
-        proxy_upload_rate 256k;
+        proxy_upload_rate $http_upload_rate;
 
         proxy_pass 10.10.10.10:9980;
     }
