--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -308,22 +308,24 @@ server {
 		proxy_set_header Expect $http_expect;
 		proxy_set_header User-Agent: Sia-Agent;
 
+		set $upload_rate 0; # do not limit upload speed on a portal without accounts
+
 		access_by_lua_block {
 			-- this block runs only when accounts are enabled
 			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
 
 			-- limit by default to 2 mbps for anonymous users
-			ngx.header["Upload-Rate"] = 2 * 1024 * 1024
+			ngx.var.upload_rate = 2 * 1024 * 1024
 			local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
 			if res.status == ngx.HTTP_OK then
 				local json = require('cjson')
 				local limits = json.decode(res.body)
-				ngx.header["Upload-Rate"] = limits.upload
+				ngx.var.upload_rate = limits.upload
 			end
 		}
 
 		# proxy this call to siad endpoint (make sure the ip is correct)
-		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
+		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3?upload_rate=$upload_rate&$args;
 	}
 
 	# endpoing implementing resumable file uploads open protocol https://tus.io
