--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -39,7 +39,7 @@ stream {
         listen 12345;
 	    listen [::]:12345;
 
-        proxy_upload_rate $http_upload_rate;
+        proxy_upload_rate $arg_upload_rate;
 
         proxy_pass 10.10.10.10:9980;
     }
