--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -315,17 +315,19 @@ server {
 			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
 
 			-- limit by default to 2 mbps for anonymous users
-			ngx.var.upload_rate = 2 * 1024 * 1024
+			-- ngx.var.upload_rate = 2 * 1024 * 1024
+			ngx.header["Upload-Rate"] = 2 * 1024 * 1024
 			local res = ngx.location.capture("/accounts/user", { copy_all_vars = true })
 			if res.status == ngx.HTTP_OK then
 				local json = require('cjson')
 				local limits = json.decode(res.body)
-				ngx.var.upload_rate = limits.upload
+				-- ngx.var.upload_rate = limits.upload
+				ngx.header["Upload-Rate"] = limits.upload
 			end
 		}
 
 		# proxy this call to siad endpoint (make sure the ip is correct)
-		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3?upload_rate=$upload_rate&$args;
+		proxy_pass http://127.0.0.1:12345/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
 	}
 
 	# endpoing implementing resumable file uploads open protocol https://tus.io
