increase size of the buffer to fit jwt in cache key

--- a/docker/nginx/conf.d/client.conf
+++ b/docker/nginx/conf.d/client.conf
@@ -545,6 +545,7 @@ server {
 		proxy_cache_valid 200 401 1m; # cache success and unauthorized responses for 1 minute
 
 		rewrite /accounts(.*) $1 break; # drop the /accounts prefix from uri
+		proxy_buffer_size 8k; # increase size of the buffer to fit jwt in cache key
 		proxy_pass http://10.10.10.70:3000; # hardcoded ip because accounts might not be available
 	}
 
