--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -70,10 +70,60 @@ http {
     # http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_http_version
     proxy_http_version 1.1;
 
+    # proxy cache definition
+    proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=skynet:10m max_size=50g inactive=48h use_temp_path=off;
+
+    # this runs before forking out nginx worker processes
+    init_by_lua_block { 
+        require "cjson" 
+        require "socket.http"
+    }
+
     # include skynet-portal-api and skynet-server-api header on every request
     header_filter_by_lua_block {
         ngx.header["Skynet-Portal-Api"] = os.getenv("SKYNET_PORTAL_API")
         ngx.header["Skynet-Server-Api"] = os.getenv("SKYNET_SERVER_API")
+    }
+
+    # ratelimit specified IPs
+    geo $limit {
+        default 0;
+        include /etc/nginx/conf.d/include/ratelimited;
+    }
+
+    map $limit $limit_key {
+        0 "";
+        1 $binary_remote_addr;
+    }
+
+    limit_req_zone $binary_remote_addr zone=uploads_by_ip:10m rate=10r/s;
+    limit_req_zone $limit_key zone=uploads_by_ip_throttled:10m rate=10r/m;
+
+    limit_req_zone $binary_remote_addr zone=registry_access_by_ip:10m rate=60r/m;
+    limit_req_zone $limit_key zone=registry_access_by_ip_throttled:10m rate=20r/m;
+
+    limit_conn_zone $binary_remote_addr zone=upload_conn:10m;
+    limit_conn_zone $limit_key zone=upload_conn_rl:10m;
+
+    limit_conn_zone $binary_remote_addr zone=downloads_by_ip:10m;
+
+    limit_req_status 429;
+    limit_conn_status 429;
+
+    # since we are proxying request to nginx from caddy, access logs will contain caddy's ip address
+    # as the request address so we need to use real_ip_header module to use ip address from
+    # X-Forwarded-For header as a real ip address of the request
+    set_real_ip_from  10.0.0.0/8;
+    set_real_ip_from  127.0.0.1/32;
+    set_real_ip_from  172.16.0.0/12;
+    set_real_ip_from  192.168.0.0/16;
+    real_ip_header    X-Forwarded-For;
+
+    # skynet-jwt contains dash so we cannot use $cookie_skynet-jwt
+    # https://richardhart.me/2012/03/18/logging-nginx-cookies-with-dashes/
+    map $http_cookie $skynet_jwt {
+        default '';
+        ~skynet-jwt=(?<match>[^\;]+) $match;
     }
 
     include /etc/nginx/conf.d/*.conf;
