--- a/docker/nginx/conf.d/server.api.conf
+++ b/docker/nginx/conf.d/server.api.conf
@@ -1,78 +1,16 @@
-proxy_cache_path /data/nginx/cache levels=1:2 keys_zone=skynet:10m max_size=50g inactive=48h use_temp_path=off;
-
-# this runs before forking out nginx worker processes
-init_by_lua_block { 
-	require "cjson" 
-	require "socket.http"
-}
-
-# ratelimit specified IPs
-geo $limit {
-	default 0;
-	include /etc/nginx/conf.d/include/ratelimited;
-}
-map $limit $limit_key {
-	0 "";
-	1 $binary_remote_addr;
-}
-
-limit_req_zone $binary_remote_addr zone=uploads_by_ip:10m rate=10r/s;
-limit_req_zone $limit_key zone=uploads_by_ip_throttled:10m rate=10r/m;
-
-limit_req_zone $binary_remote_addr zone=registry_access_by_ip:10m rate=60r/m;
-limit_req_zone $limit_key zone=registry_access_by_ip_throttled:10m rate=20r/m;
-
-limit_conn_zone $binary_remote_addr zone=upload_conn:10m;
-limit_conn_zone $limit_key zone=upload_conn_rl:10m;
-
-limit_conn_zone $binary_remote_addr zone=downloads_by_ip:10m;
-
-limit_req_status 429;
-limit_conn_status 429;
-
-# since we are proxying request to nginx from caddy, access logs will contain caddy's ip address
-# as the request address so we need to use real_ip_header module to use ip address from
-# X-Forwarded-For header as a real ip address of the request
-set_real_ip_from  10.0.0.0/8;
-set_real_ip_from  127.0.0.1/32;
-set_real_ip_from  172.16.0.0/12;
-set_real_ip_from  192.168.0.0/16;
-real_ip_header    X-Forwarded-For;
-
-# skynet-jwt contains dash so we cannot use $cookie_skynet-jwt
-# https://richardhart.me/2012/03/18/logging-nginx-cookies-with-dashes/
-map $http_cookie $skynet_jwt {
-	default '';
-	~skynet-jwt=(?<match>[^\;]+) $match;
-}
-
-upstream siad {
-	server sia:9980;
-}
-
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
+	# server name matcher
+	server_name siasky.dev dev3.siasky.dev
+
+	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.key;
-	ssl_session_timeout 1d;
-	ssl_session_cache shared:MozSSL:10m; # about 40000 sessions
-	ssl_session_tickets off;
 
-	# curl -s https://ssl-config.mozilla.org/ffdhe2048.txt -o /path/to/dhparam
-	# ssl_dhparam /data/dhparam.pem;
-
-	# intermediate configuration
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-	ssl_prefer_server_ciphers off;
-
-	# HSTS (ngx_http_headers_module is required) (63072000 seconds)
-	add_header Strict-Transport-Security "max-age=63072000" always;
-
-	# understand the regex https://regex101.com/r/BGQvi6/6
-	server_name "~^(((?<base32_subdomain>([a-z0-9]{55}))|(?<hns_domain>[^\.]+)\.hns)\.)?((?<portal_domain>[^.]+)\.)?(?<domain>[^.]+)\.(?<tld>[^.]+)$";
+	# include common ssl settings
+	include /etc/nginx/conf.d/include/ssl-settings;
 
 	# ddos protection: closing slow connections
 	client_body_timeout 1h;
@@ -92,7 +30,6 @@ server {
 	rewrite ^/portals /skynet/portals permanent;
 	rewrite ^/stats /skynet/stats permanent;
 	rewrite ^/skynet/blacklist /skynet/blocklist permanent;
-	rewrite ^/account/(.*) https://account.$domain.$tld/$1 permanent;
 
 	# This is only safe workaround to reroute based on some conditions
 	# See https://www.nginx.com/resources/wiki/start/topics/depth/ifisevil/
@@ -132,7 +69,7 @@ server {
 		proxy_cache skynet;
 		proxy_cache_valid any 1m; # cache blocklist for 1 minute
 		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://siad/skynet/blocklist;
+		proxy_pass http://sia:9980/skynet/blocklist;
 	}
 
 	location /skynet/portals {
@@ -141,7 +78,7 @@ server {
 		proxy_cache skynet;
 		proxy_cache_valid any 1m; # cache portals for 1 minute
 		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://siad/skynet/portals;
+		proxy_pass http://sia:9980/skynet/portals;
 	}
 
 	location /skynet/stats {
@@ -151,7 +88,7 @@ server {
 		proxy_cache_valid any 1m; # cache stats for 1 minute
 		proxy_set_header User-Agent: Sia-Agent;
 		proxy_read_timeout 5m; # extend the read timeout
-		proxy_pass http://siad/skynet/stats;
+		proxy_pass http://sia:9980/skynet/stats;
 	}
 
 	location /health-check {
@@ -318,7 +255,7 @@ server {
 		# }
 
 		# proxy this call to siad endpoint (make sure the ip is correct)
-		proxy_pass http://siad/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
+		proxy_pass http://sia:9980/skynet/skyfile/$dir1/$dir2/$dir3$is_args$args;
 	}
 
 	# endpoing implementing resumable file uploads open protocol https://tus.io
@@ -343,7 +280,7 @@ server {
 		proxy_redirect $scheme://$host $SKYNET_SERVER_API;
 
 		# proxy /skynet/tus requests to siad endpoint with all arguments
-		proxy_pass http://siad;
+		proxy_pass http://sia:9980;
 
 		# set max upload size dynamically based on account limits
 		rewrite_by_lua_block {
@@ -381,98 +318,37 @@ server {
 		include /etc/nginx/conf.d/include/generate-siapath;
 
 		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://siad$uri?siapath=$dir1/$dir2/$dir3&$args;
+		proxy_pass http://sia:9980$uri?siapath=$dir1/$dir2/$dir3&$args;
 	}
 
 	location /skynet/metadata {
 		include /etc/nginx/conf.d/include/cors;
 
 		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://siad;
+		proxy_pass http://sia:9980;
 	}
 
 	location /skynet/resolve {
 		include /etc/nginx/conf.d/include/cors;
 
 		proxy_set_header User-Agent: Sia-Agent;
-		proxy_pass http://siad;
+		proxy_pass http://sia:9980;
 	}
 
 	location ~ "^/(([a-zA-Z0-9-_]{46}|[a-z0-9]{55})(/.*)?)$" {
-		include /etc/nginx/conf.d/include/cors;
-		include /etc/nginx/conf.d/include/proxy-buffer;
-		include /etc/nginx/conf.d/include/proxy-cache-downloads;
-		include /etc/nginx/conf.d/include/track-download;
-
-		# redirect purge calls to separate location
-		error_page 462 = @purge;
-		if ($request_method = PURGE) {
-			return 462;
-		}
-
-		limit_conn downloads_by_ip 100; # ddos protection: max 100 downloads at a time
-
-		# we need to explicitly use set directive here because $2 and $3 will contain values with
-		# decoded whitespaces and set will re-encode it for us before passing it to proxy_pass
 		set $skylink $2;
 		set $path $3;
 
-		# $skylink_v1 and $skylink_v2 variables default to the same value but in case the requested skylink was:
-		# a) skylink v1 - it wouldn't matter, no additional logic is executed
-		# b) skylink v2 - in a lua block below we will resolve the skylink v2 into skylink v1 and update 
-		#      $skylink_v1 variable so then the proxy request to skyd can be cached in nginx (proxy_cache_key 
-		#      in proxy-cache-downloads includes $skylink_v1 as a part of the cache key)
-		set $skylink_v1 $skylink;
-		set $skylink_v2 $skylink;
+		include /etc/nginx/conf.d/include/location-skylink;
+	}
 
-		# variable for Skynet-Proof header that we need to inject 
-		# into a response if the request was for skylink v2
-		set $skynet_proof '';
+	location ~ "^/file/(([a-zA-Z0-9-_]{46}|[a-z0-9]{55})(/.*)?)$" {
+		set $skylink $2;
+		set $path $3;
+		set $args attachment=true&$args
+		set $is_args ?
 
-		access_by_lua_block {
-			-- detect whether requested skylink is v2
-			local isBase32v2 = string.len(ngx.var.skylink) == 55 and string.sub(ngx.var.skylink, 0, 2) == "04"
-			local isBase64v2 = string.len(ngx.var.skylink) == 46 and string.sub(ngx.var.skylink, 0, 2) == "AQ"
-			
-			if isBase32v2 or isBase64v2 then
-				local res = ngx.location.capture("/skynet/resolve/" .. ngx.var.skylink_v2)
-				if res.status == ngx.HTTP_OK then
-					local json = require('cjson')
-					local resolve = json.decode(res.body)
-					ngx.var.skylink_v1 = resolve.skylink
-					ngx.var.skynet_proof = res.header["Skynet-Proof"]
-				end
-			end
-
-			-- this block runs only when accounts are enabled
-			if os.getenv("ACCOUNTS_ENABLED") ~= "true" then return end
-
-			local res = ngx.location.capture("/accounts/user/limits", { copy_all_vars = true })
-			if res.status == ngx.HTTP_OK then
-				local json = require('cjson')
-				local limits = json.decode(res.body)
-				ngx.var.limit_rate = limits.download
-			end
-		}
-
-		header_filter_by_lua_block {
-			-- not empty skynet_proof means this is a skylink v2 request
-			-- so we should replace the Skynet-Proof header with the one
-			-- we got from /skynet/resolve/ endpoint, otherwise we would
-			-- be serving cached empty v1 skylink Skynet-Proof header
-			if ngx.var.skynet_proof then
-				ngx.header["Skynet-Proof"] = ngx.var.skynet_proof
-			end
-		}
-
-		proxy_read_timeout 600;
-		proxy_set_header User-Agent: Sia-Agent;
-		
-		# in case the requested skylink was v2 and we already resolved it to skylink v1, we're going to pass resolved 
-		# skylink v1 to skyd to save that extra skylink v2 lookup in skyd but in turn, in case skyd returns a redirect 
-		# we need to rewrite the skylink v1 to skylink v2 in the location header with proxy_redirect
-		proxy_redirect $skylink_v1 $skylink_v2;
-		proxy_pass http://siad/skynet/skylink/$skylink_v1$path$is_args$args;
+		include /etc/nginx/conf.d/include/location-skylink;
 	}
 
 	location @dnslink_lookup {
@@ -524,15 +400,6 @@ server {
 
 		set $lua_purge_path "/data/nginx/cache/";
 		content_by_lua_file /etc/nginx/conf.d/scripts/purge-multi.lua;
-	}
-
-	location ~ "^/file/([a-zA-Z0-9-_]{46}(/.*)?)$" {
-		include /etc/nginx/conf.d/include/proxy-buffer;
-		include /etc/nginx/conf.d/include/proxy-pass-internal;
-
-		rewrite /file/(.*) $1 break; # drop the /file/ prefix from uri
-
-		proxy_pass http://127.0.0.1/$uri?attachment=true&$args;
 	}
 
 	location /__internal/do/not/use/authenticated {
