--- a/docker/nginx/conf.d/server.api.conf
+++ b/docker/nginx/conf.d/server.api.conf
@@ -345,7 +345,8 @@ server {
 	location ~ "^/file/(([a-zA-Z0-9-_]{46}|[a-z0-9]{55})(/.*)?)$" {
 		set $skylink $2;
 		set $path $3;
-		set $args attachment=true&$args
+		set $args attachment=true&$args;
+		#set $is_args ?;
 
 		include /etc/nginx/conf.d/include/location-skylink;
 	}
