--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -13,7 +13,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings;
 
 	location / {
-        $server_name ~ "^([a-zA-Z0-9-_]{46}|[a-z0-9]{55})\."
+        $host ~ "^([a-zA-Z0-9-_]{46}|[a-z0-9]{55})\."
 		set $skylink $1;
 		set $path $uri;
 
