--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -13,8 +13,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings;
 
 	location / {
-        $host ~ "^([a-zA-Z0-9-_]{46}|[a-z0-9]{55})\."
-		set $skylink $1;
+        set_by_lua $skylink 'return string.match(ngx.var.host, "(.*)\.hns")'
 		set $path $uri;
 
 		include /etc/nginx/conf.d/include/location-skylink;
