--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:443 ssl http2;
 
 	# server name matcher
-	server_name *.hns.siasky.dev *.hns.dev3.siasky.dev
+	server_name *.hns.siasky.dev *.hns.dev3.siasky.dev;
 
 	# server specific certificate string
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.crt;
