--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -44,9 +44,9 @@ http {
         '"$http_user_agent" $upstream_response_time '
         '$upstream_bytes_sent $upstream_bytes_received '
         '"$upstream_http_content_type" "$upstream_cache_status" '
-        '"$host" "$sent_http_skynet_skylink" '
+        '"portal_domain" "$sent_http_skynet_skylink" '
         '$upstream_connect_time $upstream_header_time '
-        '$request_time "$hns_domain"';
+        '$request_time "hns_domain"';
 
     access_log  logs/access.log  main;
 
