--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -6,8 +6,9 @@ server {
 	server_name *.hns.siasky.dev *.hns.dev3.siasky.dev;
 
 	# server specific certificate string
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.key;
+	set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
