--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -5,13 +5,11 @@ server {
 	# server name matcher
 	server_name *.siasky.dev *.dev3.siasky.dev;
 
-	set_by_lua_block $cert {
-		return "wildcard_" .. string.match(ngx.var.ssl_server_name, "")
-	}
 
 	# server specific certificate string
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$server_name/$cert.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$server_name/$cert.key;
+	set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
