--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -7,7 +7,8 @@ server {
 
 
 	# server specific certificate string
-	set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
+    set $cert $server_name;
+	ssl_certificate_by_lua_block { ngx.var.cert = string.gsub(ngx.var.cert, "*", "wildcard_") }
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
