--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -6,7 +6,8 @@ server {
 	server_name *.hns.siasky.dev *.hns.dev3.siasky.dev;
 
 	# server specific certificate string
-	set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
+    set $cert $server_name;
+	ssl_certificate_by_lua_block { ngx.var.cert = string.gsub(ngx.var.cert, "*", "wildcard_") }
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
@@ -14,7 +15,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings;
 
 	location / {
-        set_by_lua $skylink 'return string.match(ngx.var.host, "(.*)\.hns")'
+        set_by_lua_block $skylink { return string.match(ngx.var.host, "(.*)\.hns") }
 		set $path $uri;
 
 		include /etc/nginx/conf.d/include/location-skylink;
