--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -5,12 +5,14 @@ server {
 	# server name matcher
 	server_name *.siasky.dev *.dev3.siasky.dev;
 
-
 	# server specific certificate string
-    set $cert $server_name;
-	ssl_certificate_by_lua_block { ngx.var.cert = string.gsub(ngx.var.cert, "*", "wildcard_") }
+	# set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
+	set $cert wildcard_.siasky.dev
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
+	set $cert_server wildcard_.dev3.siasky.dev
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert_server/$cert_server.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert_server/$cert_server.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
