--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -7,12 +7,10 @@ server {
 
 	# server specific certificate string
 	# set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
-	set $cert wildcard_.hns.siasky.dev;
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
-	set $cert_server wildcard_.hns.dev3.siasky.dev;
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert_server/$cert_server.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert_server/$cert_server.key;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.siasky.dev/wildcard_.hns.siasky.dev.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.siasky.dev/wildcard_.hns.siasky.dev.key;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.dev3.siasky.dev/wildcard_.hns.dev3.siasky.dev.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.hns.dev3.siasky.dev/wildcard_.hns.dev3.siasky.dev.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
