--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -16,7 +16,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings;
 
 	location / {
-        set_by_lua_block $skylink { return string.match(ngx.var.host, "%w") }
+        set_by_lua_block $skylink { return string.match(ngx.var.server_name, "%w+") }
 		set $path $uri;
 
 		include /etc/nginx/conf.d/include/location-skylink;
