--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -3,14 +3,13 @@ server {
     listen [::]:443 ssl http2;
 
 	# server name matcher
+	map "$ssl_server_name" $cert { ~\*(.+) wildcard_.$1; }
 	server_name *.siasky.dev *.dev3.siasky.dev;
 
 	# server specific certificate string
-	# set_by_lua_block $cert { return string.gsub(ngx.var.server_name, "*", "wildcard_") }
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.key;
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.siasky.dev/wildcard_.siasky.dev.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.siasky.dev/wildcard_.siasky.dev.key;
+	# set_by_lua_block $cert { return string.gsub(ngx.var.ssl_server_name, "*", "wildcard_") }
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
@@ -22,3 +21,26 @@ server {
 		include /etc/nginx/conf.d/include/location-skylink;
 	}
 }
+
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
+
+# 	# server name matcher
+# 	server_name *.dev3.siasky.dev;
+
+# 	# server specific certificate string
+# 	# set_by_lua_block $cert { return string.gsub(ngx.var.ssl_server_name, "*", "wildcard_") }
+# 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.crt;
+# 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/wildcard_.dev3.siasky.dev/wildcard_.dev3.siasky.dev.key;
+
+# 	# include common ssl settings
+# 	include /etc/nginx/conf.d/include/ssl-settings;
+
+# 	location / {
+#         set_by_lua_block $skylink { return string.match(ngx.var.host, "%w+") }
+# 		set $path $uri;
+
+# 		include /etc/nginx/conf.d/include/location-skylink;
+# 	}
+# }
