--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -3,11 +3,11 @@ server {
     listen [::]:443 ssl http2;
 
 	# server name matcher
-	map "$ssl_server_name" $cert { ~\*(.+) wildcard_.$1; }
 	server_name *.siasky.dev *.dev3.siasky.dev;
 
 	# server specific certificate string
-	# set_by_lua_block $cert { return string.gsub(ngx.var.ssl_server_name, "*", "wildcard_") }
+	set $cert "aaaaaaaa";
+	set_by_lua_block $cert { return string.gsub(ngx.var.ssl_server_name, "*", "wildcard_") }
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
