--- a/docker/nginx/conf.d/server.skylink.conf
+++ b/docker/nginx/conf.d/server.skylink.conf
@@ -7,7 +7,7 @@ server {
 
 	# server specific certificate string
 	set $cert "aaaaaaaa";
-	set_by_lua_block $cert { return string.gsub(ngx.var.ssl_server_name, "*", "wildcard_") }
+	set_by_lua_block $cert { return "bbbbbb" }
 	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.crt;
 	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$cert/$cert.key;
 
