--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -77,6 +77,7 @@ http {
     init_by_lua_block { 
         require "cjson" 
         require "socket.http"
+        require "resty.http"
     }
 
     # include skynet-portal-api and skynet-server-api header on every request
