--- a/docker/nginx/conf.d/server.api.conf
+++ b/docker/nginx/conf.d/server.api.conf
@@ -6,8 +6,8 @@ server {
 	server_name siasky.dev dev3.siasky.dev;
 
 	# server specific certificate string
-	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.crt;
-	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/$ssl_server_name/$ssl_server_name.key;
+	ssl_certificate     /data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/siasky.dev/siasky.dev.crt;
+	ssl_certificate_key	/data/caddy/caddy/certificates/acme-v02.api.letsencrypt.org-directory/siasky.dev/siasky.dev.key;
 
 	# include common ssl settings
 	include /etc/nginx/conf.d/include/ssl-settings;
