--- a/docker/nginx/conf.d/server.hns.conf
+++ b/docker/nginx/conf.d/server.hns.conf
@@ -9,7 +9,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
 
 	location / {
-        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "%w+") }
+        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "[^%.]+") }
 		set $path $uri;
 
 		include /etc/nginx/conf.d/include/location-hns;
@@ -27,7 +27,7 @@ server {
 	include /etc/nginx/conf.d/include/ssl-settings; # include common ssl settings
 
 	location / {
-        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "%w+") }
+        set_by_lua_block $hns_domain_name { return string.match(ngx.var.host, "[^%.]+") }
 		set $path $uri;
 
 		include /etc/nginx/conf.d/include/location-hns;
