--- a/docker/nginx/conf.d/server.api.conf
+++ b/docker/nginx/conf.d/server.api.conf
@@ -205,6 +205,9 @@ server {
 
 		# extract skylink from base64 encoded upload metadata and assign to a proper header
 		header_filter_by_lua_block {
+			ngx.header["Skynet-Portal-Api"] = os.getenv("SKYNET_PORTAL_API")
+			ngx.header["Skynet-Server-Api"] = os.getenv("SKYNET_SERVER_API")
+
 			if ngx.header["Upload-Metadata"] then
 				local encodedSkylink = string.match(ngx.header["Upload-Metadata"], "Skylink ([^,?]+)")
 
