--- a/packages/health-check/Dockerfile
+++ b/packages/health-check/Dockerfile
@@ -27,7 +27,7 @@ ENV NODE_ENV production
 # 3. start crond in the background to schedule periodic health checks
 # 4. start the health-check api service
 CMD [ "sh", "-c", \
-      "dnsmasq --no-resolv --log-facility=/var/log/dnsmasq.log --address=/siasky.net/$(node src/whatismyip.js) --server=127.0.0.11 ; \
+      "dnsmasq --no-resolv --log-facility=/var/log/dnsmasq.log --address=/siasky.dev/$(node src/whatismyip.js) --server=127.0.0.11 ; \
        echo \"$(sed 's/127.0.0.11/127.0.0.1/' /etc/resolv.conf)\" > /etc/resolv.conf ; \
        crond ; \
        node src/index.js" \
