fix proxy limit rate initialised value

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -111,6 +111,10 @@ http {
     limit_req_status 429;
     limit_conn_status 429;
 
+    # Add X-Forwarded-* headers
+    proxy_set_header X-Forwarded-Host  $host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
     # since we are proxying request to nginx from caddy, access logs will contain caddy's ip address
     # as the request address so we need to use real_ip_header module to use ip address from
     # X-Forwarded-For header as a real ip address of the request
