--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -1,6 +1,8 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    listen [::]:80;
+
+    server_name siasky.dev *.siasky.dev *.hns.siasky.dev *.dev3.siasky.dev *.hns.dev3.siasky.dev;
 
     location / {
         return 301 https://$host$request_uri;
