--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -1,10 +1,23 @@
 server {
-    listen 80;
-    listen [::]:80;
-
-    server_name siasky.dev *.siasky.dev *.hns.siasky.dev *.dev3.siasky.dev *.hns.dev3.siasky.dev;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
     location / {
         return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name siasky.dev;
+
+    location / {
+        if ($host = $server_name) {
+            return 301 https://$host$request_uri;
+        }
+         
+        include /etc/nginx/conf.d/include/location-dnslink;
     }
 }
