--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -3,6 +3,9 @@ server {
     listen [::]:80 default_server;
 
     location / {
+        rewrite_by_lua_block {
+            ngx.log(ngx.err, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
+        }
         return 301 https://$host$request_uri;
     }
 }
@@ -14,7 +17,7 @@ server {
     server_name siasky.dev;
 
     location / {
-        if ($host = $server_name) {
+        if ($host = siasky.dev) {
             return 301 https://$host$request_uri;
         }
          
