--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -4,7 +4,7 @@ server {
 
     location / {
         rewrite_by_lua_block {
-            ngx.log(ngx.err, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
+            ngx.log(ngx.ERR, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
         }
         return 301 https://$host$request_uri;
     }
