--- a/docker/nginx/conf.d/server.http.conf
+++ b/docker/nginx/conf.d/server.http.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80 default_server;
 
     location / {
-        rewrite_by_lua_block {
+        access_by_lua_block {
             ngx.log(ngx.ERR, "KAJSHDKJHASKDJHASKJHKDJASHDKJAHKASJD")
         }
         return 301 https://$host$request_uri;
@@ -17,9 +17,9 @@ server {
     server_name siasky.dev;
 
     location / {
-        if ($host = siasky.dev) {
-            return 301 https://$host$request_uri;
-        }
+        # if ($host = siasky.dev) {
+        #     return 301 https://$host$request_uri;
+        # }
          
         include /etc/nginx/conf.d/include/location-dnslink;
     }
